home page; done navbar and search items

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 # Normally on Github (Bitbucket or Gitlab), I would "hide" the content file via .env.example with
 # random numbers inside
 VUE_APP_TMDB_API_KEY=fbee13b5aab050a9d241b749318e303d
-VUE_APP_TMDB_IMG_URL='http://image.tmdb.org/t/p/w200/'
+VUE_APP_TMDB_IMG_URL=http://image.tmdb.org/t/p/w200
