--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@
 # random numbers inside
 VUE_APP_TMDB_API_KEY=fbee13b5aab050a9d241b749318e303d
 VUE_APP_TMDB_IMG_URL=http://image.tmdb.org/t/p/w200
+VUE_APP_TMDB_MOVIE_DETAILS_IMG_URL=http://image.tmdb.org/t/p/w500
