--- a/.env
+++ b/.env
@@ -1,6 +1,4 @@
 # For simplicity of the website I added a global env for Api key
 # Normally on Github (Bitbucket or Gitlab), I would "hide" the content file via .env.example with
-# random numbers inside
+# random content inside
 VUE_APP_TMDB_API_KEY=fbee13b5aab050a9d241b749318e303d
-VUE_APP_TMDB_IMG_URL=http://image.tmdb.org/t/p/w200
-VUE_APP_TMDB_MOVIE_DETAILS_IMG_URL=http://image.tmdb.org/t/p/w500
