--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "v-lazy-image": "^1.3.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
+    "vue-toasted": "^1.1.27",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.5.4"
   },
